# MCTS_Contact_Planner

./: CMakeLists.txt  README.md  config.txt  main.cpp  parallelMCTS_VirtualLoss.cpp
planFile/: CMakeLists.txt
planFile/constrains/: Bretl.cpp  dynamic_constrain.cpp  kinematics_constrain.cpp  my_cdd.cpp  solve_LP_GLPK.cpp  solver_Gurobi.cpp  util.cpp
planFile/include/: HexapodParameter.h  collisionCheck.h  geometryFun.h  myDataType.h  planning.h  saveHashTable.h  search_tree.h  user.h  zobrist_hash.h
planFile/include/constrains/: Bretl.hh  dynamic_constrain.hh  kinematics_constrain.hh  my_cdd.hh  solve_LP_GLPK.hh  solver_Gurobi.hh  util.hh
planFile/include/hit_spider/: FeetNormalVector.h  FeetPosition.h  hexapod_Base_Pose.h  hexapod_RPY.h  hexapod_State.h
planFile/planning/: HexapodParameter.cpp  collisionCheck.cpp  geometry.cpp  myDataType.cpp  planning.cpp  saveHashTable.cpp  search_tree.cpp  user.cpp  zobrist_hash.cpp
terrainFile/: 3dRandomTerrain.txt  中间空.txt
